<resources>
    <string name="app_name">android_clean_architecture_boilerplate</string>
    <string name="enter_your_account">Enter your\nAccount</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="not_yet_have_an_account">Not yet have an account?</string>
    <string name="register_here">Register here</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password_confirmation">Enter your password confirmation</string>
    <string name="register">Register</string>
    <string name="login_here">Login here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_splash_screen">Custom Splash Screen</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="name_value">Name Value</string>
    <string name="email_value">Email Value</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_wanted_to_logout">Are you sure wanted to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>