<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_enter_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elevation="0dp"
        android:text="Register your\nAccount"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/layout_name"
        app:layout_constraintStart_toStartOf="@+id/layout_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_regis_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_acc"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_acc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_regis_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_acc"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_regis_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_acc"
        app:layout_constraintTop_toBottomOf="@+id/layout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_regis_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_password_confirmation"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_confirm" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/layout_password_confirm"
        app:layout_constraintStart_toStartOf="@+id/layout_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/btn_register">


        <TextView
            android:id="@+id/tv_no_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/already_have_an_account"
            />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>